common/app/assets/stylesheets/base/base.less
p {
    font-size: 15px;
    line-height: 20px;
    color: #333;
    margin-bottom: 10px;
}

h1 {
    font-size: 24px;
    line-height: 29px;
    margin-bottom: 5px;
    font-family: georgia;
}

h2,
.standfirst {
    font-size: 17px;
    line-height: 22px;
    color: #666;
    margin-bottom: 15px;
    font-family: georgia;
}

h3 {
    margin: 0 0 7px 0;
    font-size: 14px;
    line-height: 16px;
}

h4 {
    margin: 0;
    padding: 8px 10px 7px 10px;
    background-color: #ededed;
    border-top: 1px solid #ccc;
    font-size: 14px;
    line-height: 16px;
}


.byline,
.dateline {
    font: 12px/15px arial;
    margin: 0px;
    color: #666;
}

.byline a {
  font-weight: bold;
}

.dateline {
    margin-bottom: 8px
}

span.timestamp {
    font-weight: bold;
    font-family: helvetica, arial, sans-serif;
    border-top: 1px dotted #999;
    display: block;
    padding-top: 3px;
    margin-bottom: 9px;
    margin-top: 15px;
}

.relative-timestamp {
    font-size: 12px;
    line-height: 15px;
    color: #666;
    font-family: helvetica, arial, sans-serif;
}

ol, ul {
    list-style-position: inside;
}

